syntax = "proto3";

package analytics;

import public "process.proto";
import public "calltree.proto";

// Manifest
message CumulativeCallGraphManifestRequest {
  string process_id = 1;
  double begin_ms = 2;
  double end_ms = 3;
}

message CumulativeCallGraphManifest {
  repeated CumulativeCallGraphBlockDesc blocks = 1;
  uint64 tsc_frequency = 2;
  int64 start_ticks = 3;
}

message CumulativeCallGraphBlockDesc {
  string id = 1;
  bool full = 2;
}

message CumulativeCallGraphBlockRequest {
  string block_id = 1;
  double begin_ms = 2;
  double end_ms = 3;
  uint64 tsc_frequency = 4;
  int64 start_ticks = 5;
}

message CumulativeCallGraphComputedBlock {
  map<uint32, ScopeDesc> scopes = 1;
  repeated CumulativeComputedCallGraphNode nodes = 2;
  uint32 stream_hash = 3;
  string stream_name = 4;
  bool full = 5;
}

message CumulativeComputedCallGraphNode {
  CumulativeStats stats = 1;
  repeated CumulativeStats callers = 3;
  repeated CumulativeStats callees = 4;
}

message CumulativeStats {
  uint32 hash = 1;  // not a stat, but avoids using a map in callers/callees
  double sum = 2;
  double sum_sqr = 3;
  double min = 4;
  double max = 5;
  uint64 count = 6;
  double child_sum = 7;
}